@@ -4,6 +4,7 @@ ZEsarUX 11.1 - xxxx edition. 06 Junio 2024
 * Mejoras:
 
 Permitir hotswap a Pentagon
+Mejorar aviso de Azimuth en ventana External Audio Source
 
 * Correcciones:
 
