@@ -4,6 +4,7 @@ ZEsarUX 11.1 - xxxx edition. 06 June 2024
 * Improvements:
 
 Allow hotswap to Pentagon
+Improve Azimuth warning on External Audio Source Window
 
 * Fixes:
 
